--- a/internacional.html
+++ b/internacional.html
@@ -31,7 +31,7 @@
 </head>
 <body>
 
-    <div class="article">
+    <div class="article" id="internacional">
         <h2>Noticia Internacional 1: Título</h2>
         <p>
             Contenido de la noticia internacional 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -54,7 +54,7 @@
                 Quito (EFE).- El presidente de Ecuador, Daniel Noboa, anunció este lunes que se aplicará una “semaforización” del toque de queda, que rige en el país desde el pasado 8 de enero por la crisis de seguridad desatada a inicios de año, atribuida a una arremetida de los grupos criminales, a los que tilda de terroristas.
 
                 Noboa avanzó en una entrevista con la televisión Teleamazonas que esta noche anunciará la medida con la que los cantones tendrán diferentes horarios de toques de queda y distintas regulaciones. 
-                        </p>
+        </p>
     </div>
 
 </body>
