--- a/sociedad.html
+++ b/sociedad.html
@@ -34,7 +34,7 @@
 </head>
 <body>
 
-    <div class="article">
+    <div class="article" id="soceidad">
         <h2>Artículo 1</h2>
         <p>
             La Revolución Industrial y sus consecuencias han sido un desastre para la raza humana. 
@@ -44,7 +44,7 @@
         </p>
     </div>
 
-    <div class="article">
+    <div class="article" id="sociedad">
         <h2>Artículo 2</h2>
         <p>
             La Operación Northwoods (Operation Northwoods) fue un plan del Ejército estadounidense de 1962 que pretendía generar apoyo del pueblo estadounidense para una acción militar contra la Cuba de Fidel Castro, dentro de la más amplia Operación Mangosta (Operation Mongoose), que era una iniciativa general contra Castro. El plan, que no fue llevado a cabo, requería varias operaciones encubiertas incluyendo actos de terrorismo de Estado real y simulados (como secuestros de aviones) contra objetivos civiles y militares estadounidenses en territorio estadounidense y cubano, para culpar por ellos al gobierno cubano. Este plan fue propuesto por altos cargos del Ministerio de Defensa estadounidense, entre ellos el presidente de la Junta de Jefes del Estado Mayor, Lyman Louis Lemnitzer. El presidente de Estados Unidos en aquella fecha era John F. Kennedy. 
