--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
     <title>Index</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Bienvenido a Mi Periódico</h1>
+    </header>
+
+    <nav>
+        <ul>
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="sociedad.html">Sociedad</a></li>
+            <li><a href="internacional.html">Internacional</a></li>
+            <li><a href="economia.html">Economía</a></li>
+        </ul>
+    </nav>
 </body>
 </html>
