--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
 
     <nav>
         <ul>
-            <li><a href="index.html">Inicio</a></li>
             <li><a href="sociedad.html">Sociedad</a></li>
             <li><a href="internacional.html">Internacional</a></li>
             <li><a href="economia.html">Economía</a></li>
+            <li><a href="salud.html">Salud</a></li>
+            <li><a href="tecnologia.html">Tecnología</a></li>
+            <li><a href="deportes.html">Deportes</a></li>
         </ul>
     </nav>
 </body>
