Crear rama rosa-secundario

--- a/sociedad.html
+++ b/sociedad.html
@@ -40,7 +40,6 @@
             La Revolución Industrial y sus consecuencias han sido un desastre para la raza humana. 
             Ha aumentado enormemente la expectativa de vida de aquellos de nosotros que vivimos en paises «avanzados», pero ha desestabilizado la sociedad, ha hecho la vida imposible, ha sometido a los seres humanos a indignidades, ha conducido a extender el sufrimiento psicológico (en el tercer mundo también el sufrimiento físico) y ha infligido un daño severo en el mundo natural. 
             El continuo desarrollo de la tecnología empeorará la situación. Ciertamente someterá a los seres humanos a grandes indignidades e infligirá gran daño en el mundo natural, probablemente conducirá a un gran colapso social y al sufrimiento psicológico, y puede que conduzca al incremento del sufrimiento físico incluso en paises «avanzados».
-
         </p>
     </div>
 
@@ -48,6 +47,23 @@
         <h2>Artículo 2</h2>
         <p>
             La Operación Northwoods (Operation Northwoods) fue un plan del Ejército estadounidense de 1962 que pretendía generar apoyo del pueblo estadounidense para una acción militar contra la Cuba de Fidel Castro, dentro de la más amplia Operación Mangosta (Operation Mongoose), que era una iniciativa general contra Castro. El plan, que no fue llevado a cabo, requería varias operaciones encubiertas incluyendo actos de terrorismo de Estado real y simulados (como secuestros de aviones) contra objetivos civiles y militares estadounidenses en territorio estadounidense y cubano, para culpar por ellos al gobierno cubano. Este plan fue propuesto por altos cargos del Ministerio de Defensa estadounidense, entre ellos el presidente de la Junta de Jefes del Estado Mayor, Lyman Louis Lemnitzer. El presidente de Estados Unidos en aquella fecha era John F. Kennedy. 
+        </p>
+    </div>
+
+    <!-- Nuevos artículos añadidos -->
+    <div class="article" id="sociedad">
+        <h2>Artículo 3: El Impacto de la Tecnología en las Relaciones Sociales</h2>
+        <p>
+            La tecnología ha transformado la forma en que nos relacionamos. Analizamos cómo las redes sociales y
+            las comunicaciones en línea afectan nuestras interacciones sociales cotidianas.
+        </p>
+    </div>
+
+    <div class="article" id="sociedad">
+        <h2>Artículo 4: Avances en la Educación para una Sociedad más Inclusiva</h2>
+        <p>
+            Examinamos los esfuerzos y avances en el ámbito educativo para promover la inclusión y la diversidad
+            en nuestras comunidades, buscando construir una sociedad más equitativa.
         </p>
     </div>
 
