Añadir vínculos a las páginas en index.html

--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index</title>
+    <link rel="stylesheet" href="estilos.css">
+    <title>Mi Periódico</title>
 </head>
 <body>
-    <header>
-        <h1>Bienvenido a Mi Periódico</h1>
-    </header>
+
+    <h1>Bienvenido a Mi Periódico</h1>
 
     <nav>
         <ul>
@@ -20,5 +20,14 @@
             <li><a href="deportes.html">Deportes</a></li>
         </ul>
     </nav>
+
+    <div class="article" id="bienvenida">
+        <h2>¡Explora las Últimas Noticias!</h2>
+        <p>
+            Descubre historias impactantes y actualizaciones importantes en nuestra sección de noticias. Navega a través
+            de las categorías para obtener información detallada sobre los temas que más te interesan.
+        </p>
+    </div>
+
 </body>
 </html>
